log.txt
Grand Rapids
Init, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Grand Rapids
Init, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Grand Rapids
Init, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Grand Rapids
Init, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Grand Rapids
Init, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Grand Rapids
Init, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
Sunny
Running find_wallpaper, weather = Sunny
  File "/Users/shriya/weather-wallpaper/main.py", line 19
    if input("")
                ^
SyntaxError: expected ':'
